added login feature to swagger and modified swagger settings
